2017-09-05  Karl Berry  <karl@tug.org>
        and Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c (IS_SPC_OR_EOL): new macro.
	(topenin): use it, instead of ISBLANK.
	(parse_first_line): doc fix.
	(input_line): remove only trailing space characters
	instead of using ISBLANK.
	See also analogous change in xetexdir/XeTeX_ext.c.
	Original bug report from Evan Aad,
	http://tug.org/pipermail/tex-k/2017-August/002801.html

2017-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Adopt Jonathan's solution for the Change on 2017-02-01.

2017-02-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: unsigned long long >= 0. Thanks Luigi.

2017-02-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Avoid a crash in xelatex for
	http://tug.org/pipermail/xetex/2017-January/026975.html.
	It is not a fix but a stopgap.

2017-01-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* printversion.c: 2016 ---> 2017.

2016-11-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c: Change a condition to support new primitives in e(u)ptex.

2016-06-12  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (get_date_and_time):
	rename envvar SOURCE_DATE_EPOCH_TEX_PRIMITIVES to FORCE_SOURCE_DATE.
	http://tug.org/pipermail/tex-k/2016-June/002722.html
	(and surrounding thread, starting in May)

2016-05-20  Karl Berry  <karl@tug.org>

	* TeX Live 2016 release.

2016-05-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Avoid crash for too large a value of SOURCE_DATE_EPOCH.
	(w32 only).

2016-05-06  Karl Berry  <karl@tug.org>

	* texmfmp.c (init_start_time, get_date_and_time) [onlyTeX]:
	ignore SOURCE_DATE_EPOCH... envvars for original TeX.

2016-05-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c (strtoull) [_MSC_VER]: #define as _strtoui64.

2016-05-04  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (init_start_time): new fn, factored out from
	initstarttime.
	(get_date_and_time): if envvar SOURCE_DATE_EPOCH_TEX_PRIMITIVES